Mention some "add-opens" requirements in javadocs